--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Aya"s website assignment
+<html>
+<head> 
+<title>Hydrogen</title>
+<style>
+h1 { 
+color: rgb(159, 162, 168) 
+; 
+}
+body { background-color: rgb(201, 203, 224);
+}
+</style>
+</head>
+<body>
+<img src="https://www.bing.com/images/search?view=detailV2&ccid=FDoyge3s&id=4AFD6643F5EEED390C403FB6AF44655331FACDA8&thid=OIP.FDoyge3sPjBUEW4GoYiq2wHaHV&mediaurl=https%3a%2f%2f3c1703fe8d.site.internapcdn.net%2fnewman%2fcsz%2fnews%2f800%2f2016%2fhydrogen.png&exph=200&expw=202&q=+Hydrogen!&simid=608041853191917486&ck=862DFB6B6062A7A7F2C52011BB6010D2&selectedIndex=0&FORM=IRPRST&ajaxhist=0
+" width="300px" with height="150px"> 
+<h1> Hydrogen <h1>
+<p> Henry Cavendish discovered hydrogen in the year of 1766 but he firstly called it inflammable air but shortly later a man called
+Antoine Lavoisier gave it the name hydrogen,Henry Cavindish put his infomation in the paper once he finished discovering it..<br>
+</P>
+<h2>elements<h2>
+<p>
+<ul>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Aluminium.html">Aluminium </a></li><br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Arsenic.html">Arsenic </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Chlorine.html">Chlorine </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Copper.html">Copper </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Gold.htmll">Gold </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Helium.html">Helium </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Hydrogen.htmlb">Hydrogen </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Krypton.html">Krypton </a></li> <br> 
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Lithium.html">Lithium </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Livermorium.html">Livermorium </a></li> <br> 
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Mercury.html">Mercury </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Nickel.html">Nickel </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Potassium.html">Potassium</a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Silver.html">Silver</a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Sodium.html">Sodium </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Strontium.html">Strontium </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Sulfur.html">Sulfur </a></li> <br>
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Titanium.html">Titanium</a></li> <br> 
+<li><a href= "file:///C:/Users/AyaIdelan/AppData/Local/Temp/Temp1_WebsiteProjectFiles.zip/Yttrium.html">Yttrium</a></li> <br>
+</ul>
+</P>
+<a href= "https://www.iqracollege.sa.edu.au/assets/Uploads/IQRA-Newsletter-2019-Term3-Week5.pdf">Year 7's Credit</a></li> <br>
+</body>
+<html>
